--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-   "DefaultConnection": "Server=LAOMWLI1EKALENG;Database=Busticketing;Trusted_Connection=True;TrustServerCertificate=True;",
-   // "DefaultConnection": "Server=108.181.152.132,1892;Database=busticketingsystem;User Id=sa;Password=FTS@com1234567890;Encrypt=True;TrustServerCertificate=True;"
+    "DefaultConnection": "YOUR DB CONNECTION STRING",
   },
   "AppSettings": {
     "BaseUrl": "https://ticketingsystem.runasp.net" // <-- Replace with your real public domain
